changes for new flutter version

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -127,7 +127,7 @@ linter:
     prefer_final_fields: true
     prefer_final_in_for_each: true
     prefer_final_locals: true
-    prefer_final_parameters: true
+    prefer_final_parameters: false
     prefer_for_elements_to_map_fromIterable: true
     prefer_foreach: false
     prefer_function_declarations_over_variables: false
