--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -91,7 +91,7 @@ linter:
     lines_longer_than_80_chars: false
     list_remove_unrelated_type: true
     literal_only_boolean_expressions: true
-    missing_whitespace_between_adjacent_strings: true
+    missing_whitespace_between_adjacent_strings: false
     no_adjacent_strings_in_list: true
     no_default_cases: true
     no_duplicate_case_values: true
