--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,6 +7,10 @@ analyzer:
     implicit-casts: true
     implicit-dynamic: true
 
+dart_code_metrics:
+  metrics:
+    cyclomatic-complexity: 20
+
 linter:
   rules:
     always_declare_return_types: true
@@ -17,7 +21,6 @@ linter:
     always_use_package_imports: true
     annotate_overrides: true
     avoid_annotating_with_dynamic: false
-    avoid_as: false
     avoid_bool_literals_in_conditional_expressions: true
     avoid_catches_without_on_clauses: false
     avoid_catching_errors: true
@@ -37,7 +40,7 @@ linter:
     avoid_null_checks_in_equality_operators: true
     avoid_positional_boolean_parameters: false
     avoid_print: false
-    avoid_private_typedef_functions: true
+    avoid_private_typedef_functions: false
     avoid_redundant_argument_values: false
     avoid_relative_lib_imports: true
     avoid_renaming_method_parameters: true
@@ -64,29 +67,35 @@ linter:
     cascade_invocations: false
     cast_nullable_to_non_nullable: false
     close_sinks: true
+    collection_methods_unrelated_type: true
+    combinators_ordering: true
     comment_references: true
     conditional_uri_does_not_exist: true
     constant_identifier_names: true
     control_flow_in_finally: true
     curly_braces_in_flow_control_structures: false
+    dangling_library_doc_comments: false
     depend_on_referenced_packages: true
     deprecated_consistency: true
     diagnostic_describe_all_properties: false
     directives_ordering: true
-    do_not_use_environment: true
+    discarded_futures: true
+    do_not_use_environment: false
     empty_catches: true
     empty_constructor_bodies: true
     empty_statements: true
+    enable_null_safety: true
     eol_at_end_of_file: true
     exhaustive_cases: true
     file_names: true
     flutter_style_todos: true
     hash_and_equals: true
     implementation_imports: true
-    invariant_booleans: true
+    implicit_call_tearoffs: true
     iterable_contains_unrelated_type: true
     join_return_with_assignment: false
     leading_newlines_in_multiline_strings: true
+    library_annotations: true
     library_names: true
     library_prefixes: true
     library_private_types_in_public_api: true
@@ -116,7 +125,6 @@ linter:
     prefer_adjacent_string_concatenation: true
     prefer_asserts_in_initializer_lists: false
     prefer_asserts_with_message: false
-    prefer_bool_in_asserts: true
     prefer_collection_literals: false
     prefer_conditional_assignment: false
     prefer_const_constructors: true
@@ -166,7 +174,6 @@ linter:
     sort_constructors_first: false
     sort_pub_dependencies: false
     sort_unnamed_constructors_first: true
-    super_goes_last: true
     test_types_in_equals: true
     throw_in_finally: true
     tighten_type_of_initializing_formals: true
@@ -181,8 +188,10 @@ linter:
     unnecessary_getters_setters: true
     unnecessary_lambdas: true
     unnecessary_late: true
+    unnecessary_library_directive: false
     unnecessary_new: true
     unnecessary_null_aware_assignments: true
+    unnecessary_null_aware_operator_on_extension_on_nullable: true
     unnecessary_null_checks: true
     unnecessary_null_in_if_null_operators: true
     unnecessary_nullable_for_final_variable_declarations: true
@@ -193,10 +202,14 @@ linter:
     unnecessary_string_escapes: true
     unnecessary_string_interpolations: true
     unnecessary_this: false
+    unnecessary_to_list_in_spreads: true
+    unreachable_from_main: false
     unrelated_type_equality_checks: true
     unsafe_html: true
     use_build_context_synchronously: false
+    use_colored_box: true
     use_decorated_box: true
+    use_enums: true
     use_full_hex_values_for_flutter_colors: true
     use_function_type_syntax_for_parameters: false
     use_if_null_to_convert_nulls_to_bools: true
@@ -208,6 +221,8 @@ linter:
     use_rethrow_when_possible: true
     use_setters_to_change_properties: false
     use_string_buffers: true
+    use_string_in_part_of_directives: true
+    use_super_parameters: true
     use_test_throws_matchers: true
     use_to_and_as_if_applicable: true
     valid_regexps: true
