--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,6 +3,11 @@
 # by allen brunson  january 2 2021
 
 analyzer:
+  language:
+    strict-casts: false        # causes thousands of warnings
+    strict-inference: false    # utterly useless
+    strict-raw-types: false    # utterly useless
+
 dart_code_metrics:
   metrics:
     cyclomatic-complexity: 20
@@ -73,6 +78,7 @@ linter:
     dangling_library_doc_comments: false
     depend_on_referenced_packages: true
     deprecated_consistency: true
+    deprecated_member_use_from_same_package: true
     diagnostic_describe_all_properties: false
     directives_ordering: true
     discarded_futures: true
@@ -88,6 +94,8 @@ linter:
     hash_and_equals: true
     implementation_imports: true
     implicit_call_tearoffs: true
+    implicit_reopen: true
+    invalid_case_patterns: true
     join_return_with_assignment: false
     leading_newlines_in_multiline_strings: true
     library_annotations: true
@@ -96,16 +104,20 @@ linter:
     library_private_types_in_public_api: true
     lines_longer_than_80_chars: false
     literal_only_boolean_expressions: true
+    matching_super_parameters: true
     missing_whitespace_between_adjacent_strings: false
     no_adjacent_strings_in_list: true
     no_default_cases: true
     no_duplicate_case_values: true
     no_leading_underscores_for_library_prefixes: true
     no_leading_underscores_for_local_identifiers: true
+    no_literal_bool_comparisons: false
     no_logic_in_create_state: false
     no_runtimeType_toString: true
     non_constant_identifier_names: false
     noop_primitive_operations: true
+    no_self_assignments: true
+    no_wildcard_variable_uses: true
     null_check_on_nullable_type_parameter: true
     null_closures: true
     omit_local_variable_types: false
@@ -128,6 +140,7 @@ linter:
     prefer_constructors_over_static_methods: false
     prefer_contains: true
     prefer_double_quotes: true
+    prefer_equal_for_default_values: true
     prefer_expression_function_bodies: false
     prefer_final_fields: true
     prefer_final_in_for_each: true
@@ -172,9 +185,11 @@ linter:
     tighten_type_of_initializing_formals: true
     type_annotate_public_apis: true
     type_init_formals: true
+    type_literal_in_constant_pattern: true
     unawaited_futures: true
     unnecessary_await_in_return: true
     unnecessary_brace_in_string_interps: false
+    unnecessary_breaks: false
     unnecessary_const: true
     unnecessary_constructor_name: true
     unnecessary_final: false
@@ -207,7 +222,7 @@ linter:
     use_function_type_syntax_for_parameters: false
     use_if_null_to_convert_nulls_to_bools: true
     use_is_even_rather_than_modulo: true
-    use_key_in_widget_constructors: true
+    use_key_in_widget_constructors: false
     use_late_for_private_fields_and_variables: false
     use_named_constants: true
     use_raw_strings: false
