linter rules update

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,5 +1,4 @@
 # analysis_options.yaml -- master dart analysis options
-# https://dart-lang.github.io/linter/lints/
 # by allen brunson  january 2 2021
 
 analyzer:
@@ -16,6 +15,7 @@ linter:
     always_specify_types: false
     always_use_package_imports: true
     annotate_overrides: true
+    annotate_redeclares: true
     avoid_annotating_with_dynamic: false
     avoid_bool_literals_in_conditional_expressions: true
     avoid_catches_without_on_clauses: false
@@ -79,7 +79,6 @@ linter:
     empty_catches: true
     empty_constructor_bodies: true
     empty_statements: true
-    enable_null_safety: true
     eol_at_end_of_file: true
     exhaustive_cases: true
     file_names: true
@@ -133,7 +132,6 @@ linter:
     prefer_constructors_over_static_methods: false
     prefer_contains: true
     prefer_double_quotes: true
-    prefer_equal_for_default_values: true
     prefer_expression_function_bodies: false
     prefer_final_fields: true
     prefer_final_in_for_each: true
