--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -97,6 +97,7 @@ linter:
     lines_longer_than_80_chars: false
     literal_only_boolean_expressions: true
     matching_super_parameters: true
+    missing_code_block_language_in_doc_comment: true
     missing_whitespace_between_adjacent_strings: false
     no_adjacent_strings_in_list: true
     no_default_cases: true
@@ -188,6 +189,7 @@ linter:
     unnecessary_lambdas: true
     unnecessary_late: true
     unnecessary_library_directive: false
+    unnecessary_library_name: false
     unnecessary_new: true
     unnecessary_null_aware_assignments: true
     unnecessary_null_aware_operator_on_extension_on_nullable: true
