analyzer rule change

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -189,7 +189,7 @@ linter:
     unnecessary_lambdas: true
     unnecessary_late: true
     unnecessary_library_directive: false
-    unnecessary_library_name: false
+    unnecessary_library_name: true
     unnecessary_new: true
     unnecessary_null_aware_assignments: true
     unnecessary_null_aware_operator_on_extension_on_nullable: true
