--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -29,10 +29,12 @@ linter:
     avoid_field_initializers_in_const_classes: true
     avoid_final_parameters: true
     avoid_function_literals_in_foreach_calls: true
+    avoid_futureor_void: true
     avoid_implementing_value_types: false
     avoid_init_to_null: false
     avoid_js_rounded_ints: false
     avoid_multiple_declarations_per_line: true
+    avoid_null_checks_in_equality_operators: true
     avoid_positional_boolean_parameters: false
     avoid_print: false
     avoid_private_typedef_functions: false
@@ -115,6 +117,7 @@ linter:
     null_check_on_nullable_type_parameter: true
     null_closures: true
     omit_local_variable_types: false
+    omit_obvious_local_variable_types: false
     one_member_abstracts: true
     only_throw_errors: true
     overridden_fields: true
@@ -173,6 +176,7 @@ linter:
     sort_constructors_first: false
     sort_pub_dependencies: true
     sort_unnamed_constructors_first: true
+    specify_nonobvious_local_variable_types: false
     test_types_in_equals: true
     throw_in_finally: true
     tighten_type_of_initializing_formals: true
@@ -208,7 +212,6 @@ linter:
     unnecessary_to_list_in_spreads: true
     unreachable_from_main: false
     unrelated_type_equality_checks: true
-    unsafe_html: true
     use_build_context_synchronously: false
     use_colored_box: true
     use_decorated_box: true
@@ -228,5 +231,6 @@ linter:
     use_super_parameters: true
     use_test_throws_matchers: true
     use_to_and_as_if_applicable: true
+    use_truncating_division: true
     valid_regexps: true
     void_checks: true
