--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -118,7 +118,8 @@ linter:
     null_closures: true
     omit_local_variable_types: false
     omit_obvious_local_variable_types: false
-    one_member_abstracts: true
+    omit_obvious_property_types: false
+    one_member_abstracts: false
     only_throw_errors: true
     overridden_fields: true
     package_names: true
@@ -176,6 +177,8 @@ linter:
     sort_pub_dependencies: true
     sort_unnamed_constructors_first: true
     specify_nonobvious_local_variable_types: false
+    specify_nonobvious_property_types: true
+    strict_top_level_inference: true
     test_types_in_equals: true
     throw_in_finally: true
     tighten_type_of_initializing_formals: true
@@ -184,6 +187,7 @@ linter:
     type_literal_in_constant_pattern: true
     unawaited_futures: true
     unintended_html_in_doc_comment: true
+    unnecessary_async: false
     unnecessary_await_in_return: true
     unnecessary_brace_in_string_interps: false
     unnecessary_breaks: false
@@ -191,6 +195,7 @@ linter:
     unnecessary_constructor_name: true
     unnecessary_final: false
     unnecessary_getters_setters: true
+    unnecessary_ignore: true
     unnecessary_lambdas: true
     unnecessary_late: true
     unnecessary_library_directive: false
@@ -209,8 +214,10 @@ linter:
     unnecessary_string_interpolations: true
     unnecessary_this: false
     unnecessary_to_list_in_spreads: true
+    unnecessary_underscores: true
     unreachable_from_main: false
     unrelated_type_equality_checks: true
+    unsafe_variance: false
     use_build_context_synchronously: false
     use_colored_box: true
     use_decorated_box: true
@@ -222,6 +229,7 @@ linter:
     use_key_in_widget_constructors: true
     use_late_for_private_fields_and_variables: false
     use_named_constants: true
+    use_null_aware_elements: true
     use_raw_strings: false
     use_rethrow_when_possible: true
     use_setters_to_change_properties: false
